# emlmath

./: .gitignore  Cargo.toml  README.md
doc/: eml-algebraic-coordinates.md
src/: lib.rs  main.rs
